--- a/public/views/components/sideNav/index.html
+++ b/public/views/components/sideNav/index.html
@@ -61,6 +61,11 @@
                     <li><a href="/modules/new">新增版块</a></li>
                 </ul>
             </li>
+            <li class="menu-list"><a href=""><i class="fa fa-camera"></i> <span>媒资管理</span></a>
+                <ul class="sub-menu-list">
+                    <li><a href="/media"> 图片库</a></li>
+                </ul>
+            </li>
         </ul>
         <!--sidebar nav end-->
     </div>
