增加用户删除功能

--- a/public/views/pages/users/list.html
+++ b/public/views/pages/users/list.html
@@ -73,7 +73,7 @@
                                 <td>
                                     <a href="/users/{{item.id}}"><i class="fa fa-eye"></i></a>
                                     <a href="/users/{{item.id}}/edit"><i class="fa fa-edit"></i></a>
-                                    <a href="javascript:;" data-act="deleteModule"><i class="fa fa-trash-o"></i></a>
+                                    <a href="javascript:;" tt-click="deleteUser"><i class="fa fa-trash-o"></i></a>
                                 </td>
                             </tr>
                         {% endraw %}
