--- a/public/views/pages/modules/detail.html
+++ b/public/views/pages/modules/detail.html
@@ -17,86 +17,90 @@
 
     <!--body wrapper start-->
     <div class="wrapper">
-        <div class="row">
-                <div class="col-sm-12">
-                    <section class="panel">
-                        <header class="panel-heading">
-                        <span node-type="moduleName"></span>
-                        <span class="tools pull-right">
-                            <a href="javascript:;" class="fa fa-chevron-down"></a>
-                            <a href="javascript:;" class="fa fa-times"></a>
-                         </span>
-                        </header>
-                        <div class="panel-body" id="fragmentsList">
-                            <table class="table  table-hover general-table">
-                                <thead>
-                                <tr>
-                                    <th> 名称</th>
-                                    <th> 链接</th>
-                                    <th> 排序</th>
-                                    <th> 显示/隐藏</th>
-                                    <th> 操作</th>
-                                </tr>
-                                </thead>
-                                <tbody>
-                                </tbody>
-                            </table>
-                        </div>
-                    </section>
-                </div>
-        </div>
+
 
         <div class="row">
-            <div class="col-lg-12">
+            <div class="col-md-12">
                 <section class="panel">
-                    <header class="panel-heading">
-                        字段定义
-                        <span class="tools pull-right">
-                            <a class="fa fa-chevron-down" href="javascript:;"></a>
-                            <a class="fa fa-times" href="javascript:;"></a>
-                         </span>
-                    </header>
-                    <div class="panel-body">
-                        <div class="form">
-                            <form action="#">
-                                <div class="form-group">
-                                    <label for="fragment-title">名称</label>
-                                    <input type="text" class="form-control" id="fragment-title" placeholder="标题">
-                                </div>
-                                <div class="form-group">
-                                    <label for="fragment-subtitle">链接</label>
-                                    <input type="text" class="form-control" id="fragment-subtitle" placeholder="副标题">
-                                </div>
-                                <div class="form-group">
-                                    <label for="fragment-abstract">排序</label>
-                                    <div class="col-sm-12">
-                                        <textarea class="form-control ckeditor" name="editor1" rows="6"></textarea>
+                        <header class="panel-heading custom-tab ">
+                            <ul class="nav nav-tabs">
+                                <li class="active">
+                                    <a href="#home" data-toggle="tab">内容列表</a>
+                                </li>
+                                <li class="">
+                                    <a href="#about" data-toggle="tab">字段定义</a>
+                                </li>
+                            </ul>
+                        </header>
+                        <div class="panel-body">
+                            <div class="tab-content">
+                                <div class="tab-pane active" id="home">
+                                    <div class="row">
+                                        <div class="col-sm-12">
+                                            <section class="panel">
+                                                <div class="panel-body" id="fragmentsList">
+                                                    <table class="table  table-hover general-table">
+                                                        <thead>
+                                                        <tr>
+                                                            <th> 名称</th>
+                                                            <th> 链接</th>
+                                                            <th> 排序</th>
+                                                            <th> 显示/隐藏</th>
+                                                            <th> 操作</th>
+                                                        </tr>
+                                                        </thead>
+                                                        <tbody>
+                                                        </tbody>
+                                                    </table>
+                                                </div>
+                                            </section>
+                                        </div>
                                     </div>
                                 </div>
-                                <div class="form-group">
-                                    <label for="fragment-content">显示隐藏</label>
-                                    <div class="col-sm-12">
-                                        <textarea class="form-control ckeditor" name="editor2" rows="6"></textarea>
+                                <div class="tab-pane" id="about">
+                                    <div class="row">
+                                        <div class="col-lg-12">
+                                            <section class="panel">
+                                               
+                                                <div class="panel-body">
+                                                    <div class="form">
+                                                        <form action="#">
+                                                            <div class="form-group">
+                                                                <label for="fragment-title">名称</label>
+                                                                <input type="text" class="form-control" id="fragment-title" placeholder="标题">
+                                                            </div>
+                                                            <div class="form-group">
+                                                                <label for="fragment-subtitle">链接</label>
+                                                                <input type="text" class="form-control" id="fragment-subtitle" placeholder="副标题">
+                                                            </div>
+                                                            <div class="form-group">
+                                                                <label for="fragment-ext1">ext1</label>
+                                                                <input type="text" class="form-control" id="fragment-ext1" placeholder="ext1">
+                                                            </div>
+                                                            <div class="form-group">
+                                                                <label for="fragment-ext2">ext2</label>
+                                                                <input type="text" class="form-control" id="fragment-ext2" placeholder="ext2">
+                                                            </div>
+                                                            <div class="form-group">
+                                                                <label for="fragment-ext3">ext3</label>
+                                                                <input type="text" class="form-control" id="fragment-ext3" placeholder="ext3">
+                                                            </div>
+                                                        </form>
+                                                    </div>
+                                                </div>
+                                            </section>
+                                        </div>
                                     </div>
                                 </div>
-                                <div class="form-group">
-                                    <label for="fragment-ext1">ext1</label>
-                                    <input type="text" class="form-control" id="fragment-ext1" placeholder="ext1">
-                                </div>
-                                <div class="form-group">
-                                    <label for="fragment-ext2">ext2</label>
-                                    <input type="text" class="form-control" id="fragment-ext2" placeholder="ext2">
-                                </div>
-                                <div class="form-group">
-                                    <label for="fragment-ext3">ext3</label>
-                                    <input type="text" class="form-control" id="fragment-ext3" placeholder="ext3">
-                                </div>
-                            </form>
+                                
+                            </div>
                         </div>
-                    </div>
-                </section>
+                    </section>
             </div>
         </div>
+        
+
+       
     </div>
     <!--body wrapper end-->
 
@@ -104,7 +108,7 @@
     <script>
     requirejs(['/js/common.js'], function (common) {
         requirejs(['modernizr','bootstrap', 'app/modules/index'], function(a, b, moduleController){
-            moduleController.initDetailPage();
+            moduleController.initDetail();
         });
     });
     </script>
