--- a/public/views/pages/modules/detail.html
+++ b/public/views/pages/modules/detail.html
@@ -1,6 +1,7 @@
 {% extends '../layouts/default.html' %}
 
 {% block content %}
+<div tt-controller="app/modules/index" tt-init="initDetail">
     <!-- page heading start-->
     <div class="page-heading">
         <h3>
@@ -49,9 +50,30 @@
                                                             <th> 操作</th>
                                                         </tr>
                                                         </thead>
-                                                        <tbody>
+                                                        <tbody tt-repeat="item in fragments">
+                                                        {% raw %}
+                                                        <tr>
+                                                            <td><a href="/modules/{{item.cms_module_id}}/fragments/{{item.id}}">{{item.title}}</a></td>
+                                                            <td class="hidden-phone">{{item.ext1}}</td>
+                                                            <td>{{item.created}} </td>
+                                                            <td><span class="label label-success label-mini">显示</span></td>
+                                                            <td>
+                                                                <a href="#"><i class="fa fa-eye"></i></a>
+                                                                <a href="#"><i class="fa fa-edit"></i></a>
+                                                                <a href="#"><i class="fa fa-trash-o"></i></a>
+                                                            </td>
+                                                        </tr>
+                                                        {% endraw %}
                                                         </tbody>
                                                     </table>
+                                                    <hr>
+                                                    <div class="row-fluid">
+                                                        <div class="span6">
+                                                            <div class="dataTables_paginate paging_bootstrap pagination">
+                                                                <ul></ul>
+                                                            </div>
+                                                        </div>
+                                                    </div>
                                                 </div>
                                             </section>
                                         </div>
@@ -112,5 +134,5 @@
         });
     });
     </script>
-
+</div>
 {% endblock %}
