--- a/public/views/pages/modules/detail.html
+++ b/public/views/pages/modules/detail.html
@@ -80,7 +80,7 @@
                                 <div class="col-lg-12">
                                     <section class="panel">
                                         <div class="panel-body">
-                                            <table class="table  table-hover general-table" id="userList">
+                                            <table class="table  table-hover general-table" id="propEditor">
                                                 <thead>
                                                     <tr>
                                                         <th> 属性名</th>
@@ -89,50 +89,17 @@
                                                         <th> 校验</th>
                                                     </tr>
                                                 </thead>
-                                                <tbody>
-                                                    <tr>
-                                                        <td>title</td>
-                                                        <td>
-                                                            <input type="text" class="form-control" placeholder="别名" tt-model="user.username">
-                                                        </td>
-                                                        <td>
-                                                            <select class="form-control m-bot15">
-                                                                <option value="text">单行文本</option>
-                                                                <option value="mtext">多行文本</option>
-                                                                <option value="link">超链接</option>
-                                                                <option value="image">图片</option>
-                                                                <option value="number">数字</option>
-                                                                <option value="date">日期</option>
-                                                                <option value="boolean">布尔值</option>
-                                                            </select>
-                                                        </td>
-                                                        <td>
-                                                            <input type="text" class="form-control" placeholder="校验">
-                                                        </td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td>subtitle</td>
-                                                        <td>
-                                                            <input type="text" class="form-control" placeholder="别名" tt-model="user.username">
-                                                        </td>
-                                                        <td>
-                                                            <select class="form-control m-bot15">
-                                                                <option value="text">单行文本</option>
-                                                                <option value="mtext">多行文本</option>
-                                                                <option value="link">超链接</option>
-                                                                <option value="image">图片</option>
-                                                                <option value="number">数字</option>
-                                                                <option value="date">日期</option>
-                                                                <option value="boolean">布尔值</option>
-                                                            </select>
-                                                        </td>
-                                                        <td>
-                                                            <input type="text" class="form-control" placeholder="校验">
-                                                        </td>
-                                                    </tr>
-
-                                                </tbody>
-                                            </table>   
+                                                <tbody></tbody>
+                                                
+                                            </table>
+                                            <p>
+                                                <button class="btn btn-info" type="button" tt-click="savePropDefination">
+                                                    <i class="fa fa-refresh"></i> 更新
+                                                </button>
+                                                <button class="btn btn-default" type="button">
+                                                    <i class="fa fa-cross"></i> 取消
+                                                </button>
+                                            </p>
                                         </div>
                                     </section>
                                 </div>
