增加模块增加功能

--- a/public/views/pages/modules/detail.html
+++ b/public/views/pages/modules/detail.html
@@ -10,7 +10,7 @@
             <li>
                 <a href="#">版块详情</a>
             </li>
-            <li class="active" node-type="moduleName"></li>
+            <li class="active" tt-bind="module.name"></li>
         </ul>
     </div>
     <!-- page heading end-->
